# RectClash

./: .gitignore  Cargo.toml  README.md  RectClash.sln  build.rs
RectClash/: CheckHealthDead.cs  ColisionResponseCom.cs  CollsionDetector.cs  Combat.cs  CombatRevolver.cs  DeathCom.cs  DebugCatagroys.cs  EntityFactory.cs  FootSoliderAI.cs  IAgilityDataCom.cs  IAttackCom.cs  IDamageResponse.cs  IHealthCom.cs  IMovementDataCom.cs  IMovementLogic.cs  ITeamData.cs  Keybinds.json  LowerValueDamageResponse.cs  LowerVolictyDamageResponse.cs  MoveStraightLogic.cs  MoveTowardsEnemyLogic.cs  MovementCom.cs  Program.cs  PunchAttack.cs  RectClash.csproj  RectClashDebug.cs  RectangleDataCom.cs  ShapeCom.cs  TeamCom.cs  TeamInfo.cs  Utiliy.cs
RectClash/ECS/: Camera.cs  Com.cs  ECSConsants.cs  Engine.cs  Ent.cs  ICom.cs  IDrawable.cs  IEnt.cs  IObv.cs  ISubject.cs  IWindowCom.cs  Matrix.cs  Subject.cs  Time.cs  Window.cs  WindowCom.cs
RectClash/Game/: Cell.cs  CellInfoCom.cs  CellInputCom.cs  CircleMove.cs  Consts.cs  EntFactory.cs  Event.cs  GameConstants.cs  GameEvent.cs  GameSubject.cs  GridCom.cs  IGameObv.cs  IObvs.cs  KeyBindsAccessor.cs  PlayerInputCom.cs  ProgressBarCom.cs  Subject.cs  Tags.cs  TurnHandlerCom.cs  UnitInfoCom.cs  WorldCom.cs
RectClash/Misc/: CollectionExtensions.cs  Utility.cs  WeightedList.cs
Resources/: SeedFile.txt  death_sound.flac
my_derive/: Cargo.toml
src/: camera.rs  collision.rs  common.rs  components.rs  decision.rs  factory.rs  input.rs  main.rs  measurements.rs  misc.rs  movement.rs  perception.rs  render.rs  scripting.rs
(+69 files in other folders)
